first glance at composability

--- a/first_react/index.html
+++ b/first_react/index.html
@@ -9,6 +9,8 @@
     </head>
     <body>
         <div id="root"></div>
+		<div id="list"></div>
+		<div id="components"></div>
         <script src="index.js" type="text/babel"></script>
     </body>
 </html>
