--- a/first_react/index.html
+++ b/first_react/index.html
@@ -11,6 +11,7 @@
         <div id="root"></div>
 		<div id="list"></div>
 		<div id="components"></div>
+        <div id="imperative"></div>
         <script src="index.js" type="text/babel"></script>
     </body>
 </html>
