Introduction to JSX

--- a/first_react/index.html
+++ b/first_react/index.html
@@ -8,10 +8,12 @@
         <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     </head>
     <body>
+        <div id="nav"></div>
         <div id="root"></div>
 		<div id="list"></div>
 		<div id="components"></div>
         <div id="imperative"></div>
+        <div id="page"></div>
         <script src="index.js" type="text/babel"></script>
     </body>
 </html>
